--- a/index.html.html
+++ b/index.html.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatition">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Фотогалерея</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -17,4 +17,5 @@
         </div>
     </div>
 </body>
+
 </html>
